# nova-guest-client

./: requirements.txt  setup.cfg
novaguestclient/: base.py  client.py  constants.py  exceptions.py  version.py
novaguestclient/cli/: formatter.py  networking.py  shell.py  utils.py
novaguestclient/v1/: networking.py
