[metadata]
name = python-novaguestclient
summary = Nova Guest Command-line Client
description-file =
    README.md
author = Cloudbase Solutions Srl
author-email = info@cloudbasesolutions.com
home-page = https://cloudbase.it
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Environment :: Console

[files]
packages =
    novaguestclient

[entry_points]
console_scripts =
    nova-guest = novaguestclient.cli.shell:main

guestagent.v1 =
    networking_apply = novaguestclient.cli.networking:Networking

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
